...
    <!--    &lt;!&ndash; RecyclerView for displaying images &ndash;&gt;-->
    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/photos_recycler_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:background="@color/material_dynamic_neutral80"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/back_to_main_button"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/display_photos_text"-->
    <!--        tools:listitem="@layout/photo_item_layout"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:layout_marginTop="10dp"-->
...
        android:textColor="@android:color/holo_blue_bright"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="clickSavePhotos"

...
